# flowerid

./: .gitignore  .gitmodules  build.cmd  pyflowerid.pyx  readme.md  setup.py
bindings/flowerid_c/: Cargo.toml
bindings/flowerid_c/include/: flowerid.h
bindings/flowerid_c/src/: lib.rs
bindings/flowerid_cpp/: .gitignore  CMakeLists.txt  flowerid.cpp  test.cpp
bindings/flowerid_cpp/include/: flowerid.h
bindings/pyflowerid/: .gitignore  setup.py  test_all.py
git_hooks/: pre-commit
pyflowerid/: setup.py
src/: base64.rs  config.rs  generator.rs  id.rs  lib.rs  limits.rs  stub_time_systemtime.rs
src/stubs/: mod.rs  systemtime.rs
tests/: usage.rs
